--- a/application/modules/customer/views/scripts/performers/performer-view.phtml
+++ b/application/modules/customer/views/scripts/performers/performer-view.phtml
@@ -141,7 +141,81 @@
       
     </div>
     <!--/ right column end --> 
-    
+        <div class="col-lg-12" style="padding-bottom: 10px">
+            <h3 class="block-title-3">
+                Отзывы  
+            </h3>
+            <?php foreach($this->feedbacks as $feedback){?>
+            <div class="col-sm-12">
+            <div class="col-lg-3"> 
+                <?php if($feedback['kind'] == 'negative'){ ?>
+                        <p class="text-danger">Отрицательный</p>
+                <?php }else{?>
+                        <p class="text-success">Положительный</p>
+                        <span class="selected-color"><strong>Оценка</strong></span>
+                        <ul class="swatches Color">
+                            <?php switch ($feedback['rating']){
+                                case 1:?>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                            <?php break;
+                                case 2:
+                        ?>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                          <?php
+                          break;
+                          case 3: ?>  
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                          <?php break;
+                                case 4:
+                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li > <a style="background-color:#adadad"> </a> </li>
+                            <?php break;
+                                case 5:
+                      ?>      <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                              <li> <a style="background-color:#f1f40e"> </a> </li>
+                            <?php 
+                            break;
+                            default: ?>
+                            <li > <a style="background-color:#adadad"> </a> </li>
+                            <li > <a style="background-color:#adadad"> </a> </li>
+                            <li > <a style="background-color:#adadad"> </a> </li>
+                            <li > <a style="background-color:#adadad"> </a> </li>
+                            <li > <a style="background-color:#adadad"> </a> </li>
+                            <?php }?>
+                                          </ul>
+                                  <?php } ?>
+
+            </div>
+            <div class="col-lg-2">
+                <img class="img-thumbnail" width="100%" src="<?= $this->baseUrl().'/images/users_images/'.$feedback['u_image'] ?>">
+            </div>
+            <div class="col-lg-7"> 
+                <h2><?=  $feedback['u_username']?></h2>
+                    <p><?= $feedback['text'] ?></p>
+                    <h3 class="product-code"><?= date("d.m.Y",$feedback['created']); ?></h3>
+            </div>
+            </div>
+            <?php } ?>
+            <?=  $this->paginationControl($this->feedbacks, 'Sliding', 'pagination.phtml') ?>
+        </div>
   </div>
   <!--/.row-->
 
