comments and chat if performer doing like  customer

--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -40,7 +40,7 @@
                     <?php }else{?>    
                         <a data-toggle="modal" data-target="#notallowedModal">   
                     <?php } ?>        
-                            <?= $task['c_username'].' '.$task['c_surname'] ?>
+                            <?= $task['c_username']?>
                     </a>
                 </td>
                 <td><?= date("d.m.Y", $task['final_date']) ?></td>
