comments and chat if performer doing like  customer

--- a/application/modules/customer/views/scripts/task/view.phtml
+++ b/application/modules/customer/views/scripts/task/view.phtml
@@ -270,7 +270,7 @@
             <?php foreach($this->prepositions as $preposition){?>
             <tr id="tr<?= $preposition['u_id'] ?>">
                 <td>
-                    <a href="<?= $this->baseUrl()."/customer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_surname'].' '.$preposition['u_username'] ?></a>
+                    <a href="<?= $this->baseUrl()."/customer/performers/performer-view/id/".$preposition['performer_id'] ?>"><?= $preposition['u_username'].' '.substr($preposition['u_surname'], 0, 1).'.' ?></a>
                 </td>
                 <td>
                     <?= floor($preposition['rating']) ?>
