--- a/application/modules/performer/views/scripts/index/tasks.phtml
+++ b/application/modules/performer/views/scripts/index/tasks.phtml
@@ -1,5 +1,127 @@
+<div class="col-lg-12 col-md-12 col-sm-12">
+      <div class="w100 clearfix category-top">
+        <h2> Задачи </h2>
+        
+      </div>
 
-        <?php if(!$this->tasks){?>
+      <!--/.subCategoryList-->
+ <?php if($this->tasks){?>
+      <div class="w100 productFilter clearfix">
+        <div class="pull-right ">
+          <div class="change-order pull-left">
+            <select class="form-control selectpicker" onchange="changeSortOption()"  name="category" id="categorySelect">
+              <option value="0" selected="selected">Все категории</option>
+                <?php foreach($this->categories as $category){?>
+                <optgroup label="<?= $category['title'] ?>">
+                
+                <?php if(!empty($category['children'])){?>
+                     <?php foreach($category['children'] as $kid){?>
+                        <option value="<?= $kid['id'] ?>" <?php if($this->currentCategory == $kid['id']):?> selected <?php endif;?> ><?= $kid['title'] ?></option>
+                     <?php } ?>
+                <?php } ?>
+                        </optgroup>
+              <?php } ?> 
+            </select>
+          </div>
+          <div class="change-order pull-right">
+            <select onchange="changeSortOption()" class="form-control" id="orderSel" name="orderby" >
+              <option selected="selected" value="default">По умолчанию</option>
+              <?php if($this->sortOption != 'created_at DESC'){?>
+                <option value="created_at_ASC" >По дате</option>
+              <?php }else if($this->sortOption != 'created_at ASC'){?> 
+                <option value="created_at_DESC" >По дате</option>
+              <?php } ?>
+              <?php if($this->sortOption != 'customers_price DESC'){?>
+                <option value="customers_price_ASC">По цене</option>
+              <?php }else if($this->sortOption == 'customers_at ASC'){ ?>  
+                <option value="customers_price_DESC">По цене</option>
+              <?php } ?>
+            </select>
+          </div>
+          <div class="change-view pull-right">
+              <a href="#" title="Grid" class="grid-view">
+                  <i class="fa fa-th-large"></i> </a>
+              <a href="#" title="List" class="list-view ">
+                  <i class="fa fa-th-list"></i>
+              </a> 
+          </div>
+        </div>
+      </div>
+      <!--/.productFilter-->
+      <div class="row  categoryProduct xsResponse clearfix">
+        <?php foreach($this->tasks as $task){?>  
+          <?php 
+                $taskPoints = 15*$task['customers_price'];
+                $taskPoints = $taskPoints/100;
+            ?>
+            <div class="item col-sm-4 col-lg-4 col-md-4 col-xs-6">
+              <div class="product">
+
+                <div class="image">  
+                    <?php if($this->freePoints >= $taskPoints){?>
+                        <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
+                        </a>
+                    <?php }else{?>  
+                        <a data-toggle="modal" data-target="#notallowedModal">
+                            <img src="<?= $this->baseUrl().'/images/users_images/'.$task['u_image'] ?>" alt="img" class="img-responsive">
+                        </a>
+                    <?php } ?> 
+                </div>
+                <div class="description">
+                  <h4>
+                      <?php if($this->freePoints >= $taskPoints){?>
+                        <a href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>">
+                            <?= $task['title'] ?>
+                        </a>
+                      <?php }else{?>    
+                        <a data-toggle="modal" data-target="#notallowedModal"></a> 
+                      <?php } ?> 
+                  </h4>
+                  <h3><?= $task['u_username'] ?></h3>
+                    <div class="grid-description">
+                        <p><?= $task['description'] ?></p>
+                    </div>
+                  <span ><?= $task['customers_price'] ?> руб</span> </div>
+<!--                <div class="price"> <span><? $this->task['customers_price'] ?> </span>руб </div>-->
+                <div class="action-control"> 
+                    <?php if($this->freePoints >= $taskPoints){?>
+                        <a class="btn btn-primary" href="<?= $this->baseUrl().'/performer/task/view/id/'.$task['id'] ?>"> 
+                            <span class="add2cart">
+                                Подробнее
+                            </span> 
+                        </a> 
+                    <?php }else{?>    
+                        <a class="btn btn-primary" data-toggle="modal" data-target="#notallowedModal"> 
+                            <span class="add2cart">
+                                Подробнее
+                            </span> 
+                        </a> 
+                    <?php } ?> 
+                </div>
+              </div>
+            </div>
+        <?php } ?>
+        <!--/.item-->
+      </div>
+      <!--/.categoryProduct || product content end-->
+      
+      <div class="w100 categoryFooter">
+        <div class="pagination pull-left no-margin-top">
+          <?=  $this->paginationControl($this->tasks, 'Sliding', 'pagination.phtml') ?>
+        </div>
+        <div class="pull-right pull-right col-sm-4 col-xs-12 no-padding text-right text-left-xs">
+          
+        </div>
+      </div>
+      <!--/.categoryFooter--> 
+ <?php }else{?>
+      <div class="col-sm-12">
+          <h3>Открытых задач пока нет</h3>
+      </div>    
+ <?php } ?>     
+    </div>
+        <?php if($this->tasks){?>
         <div class="col-lg-12">
             <h3>По вашим видам деятельности задач не найдено</h3>
         </div>
@@ -74,4 +196,12 @@
 $(document).ready(function(){
    $('#taskTable').DataTable();
 });
+
+function changeSortOption(){
+    var sortOption = $('#orderSel :selected').val();
+    var category = $('#categorySelect :selected').val();
+    window.location.href = '<?= $this->baseUrl() ?>/performer/index/tasks/sort_option/'+sortOption+'/category/'+category+'/';
+    
+}
+
 </script>
